Almost ready for prime time submission
Tweaked some of the main page look, updated AI to choose defenders,
attackers and puchased elements a bit smarter.

--- a/index.html
+++ b/index.html
@@ -5,19 +5,21 @@
 <title>Chem Fight - Chemistry Battle Game</title>
 <script type="text/javascript" src="js/Stratiscape-prod.js"></script>
 <script type="text/javascript" src="js/audio-interface.js"></script>
-
+<!--
 <script type="text/javascript" src="chemfight/Globals.js"></script>
 <script type="text/javascript" src="chemfight/Util.js"></script>
 <script type="text/javascript" src="chemfight/Model.js"></script>
 <script type="text/javascript" src="chemfight/View.js"></script>
 <script type="text/javascript" src="chemfight/Controller.js"></script>
 <script type="text/javascript" src="chemfight/Player.js"></script>
-<!--
-<script type="text/javascript" src="cf.js"></script>
 -->
+<script type="text/javascript" src="cf.js"></script>
+
 <style type="text/css">
 	body {
 		font: 12px 'Lucida Sans Unicode', 'Lucida Grande', sans-serif;
+		color: #FE0;
+		background-color: #000;
 	}
 	#knownCompoundList ul {
 		list-style: none;
@@ -34,7 +36,7 @@
 
 function SetupCF() {
 
-	window.name = "bunnydungeon-home";
+	window.name = "chemfight-home";
 	
 	SetupChemFight();
 	
